src/FinancialForce Accounting/objects/codaSection__c.object
<CustomObject>
    <description>Stores a part of the formats saved from FinancialForce Print Formatter.</description>
    <fields>
        <fullName>Embedded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Embedded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FormType__c</fullName>
        <label>FormType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormatCode__c</fullName>
        <label>FormatCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormatData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FormatData</label>
        <referenceTo>codaFormatData__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrintFormat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PrintFormat</label>
        <referenceTo>codaPrintFormat__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>STName__c</fullName>
        <label>STName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionSequence__c</fullName>
        <label>SectionSequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SectionType__c</fullName>
        <label>SectionType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>com_section_header</fullName>
                </value>
                <value>
                    <fullName>com_section_body</fullName>
                </value>
                <value>
                    <fullName>com_section_footer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UseFormat__c</fullName>
        <label>UseFormat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>com_printformat_inherit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisibleBetween__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleBetween</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleFirst__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleFirst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleLast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleLast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleOnePage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleOnePage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X__c</fullName>
        <label>X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y__c</fullName>
        <label>Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>